--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,14 @@ a {
 ul {list-style-type: none;
 }
 .navigation {
-    background: #fff;
-    
+    background: #fff;  
+}
+header ul {
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #2e2f42;
 }
 .navigation-studio {
     font-family: "Roboto", sans-serif;
